1999-07-14  James Henstridge  <james@daa.com.au>

	* pygtk.h: a new file with a similar use to the arrayobject.h in
	numeric python.  I will convert over to using this in pygtk and
	gnome-python.

1999-07-13  James Henstridge  <james@daa.com.au>

	* gtkmodule.c (_wrap_gdk_threads_enter): unblock threads when waiting
	for the GDK lock.  This allows other threads to unlock it, and should
	prevent some deadlocks.

	* gtkmodule.c (gtk_main_iteration, gtk_events_pending): removed code
	to unlock gtk thread -- Owen fixed this properly in gtk.

1999-07-12  James Henstridge  <james@daa.com.au>

	* gtk.py: fixed a few bugs reported by Ville Lauriki.

	* generate/gtkmenus.defs (gtk_item_factory_add_foreign): fix a typo.

	* gtkmodule.c: fixed problems if gdk_atom_name returns NULL.
	
	(_wrap_gtk_main_iteration, _wrap_gtk_events_pending): added
	GDK_THREADS_LEAVE() and GDK_THREADS_ENTER() calls round these
	functions.  Without this, it deadlocks if threads are enabled.

	* generate/gtklists.defs (GtkTreeItem): added wrapper for
	treeitem->subtree attribute.

	* pyglade/build.py (text_new): small fix.

1999-05-19  James Henstridge  <james@daa.com.au>

	* NEWS: added news about changes in this version.

	* configure.in, pygtk.spec: updated version number to 0.6.1.

1999-05-13  James Henstridge  <james@daa.com.au>

	* gtkmodule.c (PyGtk_item_factory_cb): forgot to wrap the function
	call in PyGTK_{,UN}BLOCK_THREADS -- this was causing seg faults
	for people with threading built into their python.
	(PyGtk_MenuPosition): similar fix.

1999-04-25  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkWidget.get_allocation): a wrapper for the new function.

	* gtkmodule.c: added a routine for getting the allocation of a widget.

1999-04-22  James Henstridge  <james@daa.com.au>

	* NEWS: added a summary of the new features.

	* pygtk.spec: upped version number.

	* configure.in: upped version number to 0.6.0.  I think thread support
	is a big enough feature to bump it up to 0.6.
