@@ -1,5 +1,14 @@
 1999-07-14  James Henstridge  <james@daa.com.au>
 
+	* gdkimlibmodule.c: modified to use the pygdkimlib.h header.
+
+	* pygdkimlib.h: new file similar to pygtk.h, but for _gdkimlib module.
+
+	* gdkimlibmodule.c: modified to use the pygtk.h header.
+
+	* gtkmodule.c: modified file to use the pygtk.h header, and set
+	up the _gtk._PyGtk_API object correctly.
+
 	* pygtk.h: a new file with a similar use to the arrayobject.h in
 	numeric python.  I will convert over to using this in pygtk and
 	gnome-python.
